adding decompiler in tests