@@ -177,6 +177,14 @@
 			<artifactId>easymock</artifactId>
 			<version>5.1.0</version>
 		</dependency>
+
+		<dependency>
+			<groupId>org.jboss.windup.decompiler</groupId>
+			<artifactId>decompiler-fernflower</artifactId>
+			<version>6.3.7.Final</version>
+			<scope>provided</scope>
+		</dependency>
+
 	</dependencies>
 
 	<build>
@@ -191,8 +199,9 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.3</version>
 				<configuration>
-					<source>17</source>
-					<target>17</target>
+					<source>21</source>
+					<target>21</target>
+					<compilerArgs>--enable-preview</compilerArgs>
 				</configuration>
 			</plugin>
 
